# mpit25_NetJaggers

./: .gitignore  README.md  docker-compose.yml
auth_project/: .env.example  Dockerfile  alembic.ini  requirements.txt
auth_project/alembic/: env.py
auth_project/alembic/versions/: 0001_baseline_create_users.py  0002_create_social_tokens.py
auth_project/app/: database.py  dependencies.py  main.py  redis_client.py
auth_project/app/api/v1/: __init__.py
auth_project/app/core/: config.py  security.py
auth_project/app/crud/: social_token.py  user.py
auth_project/app/models/: social_token.py  user.py
auth_project/app/schemas/: social_token.py  token.py  user.py  vk_posting.py
echo_pr/: README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsr.config.json  vite.config.ts
echo_pr/src/app/: main.tsx
echo_pr/src/app/providers/: query-providers.tsx
echo_pr/src/app/routes/: 404.tsx  __root.tsx  about.tsx  dashboard.tsx  docs.tsx  index.tsx  profile.tsx
echo_pr/src/app/styles/: _base.scss  _fonts.scss  _global.scss  _resets.scss  _variables.scss
echo_pr/src/pages/dashBoardPage/: DashBoardPage.tsx
echo_pr/src/pages/documentationPage/: DocumentationPage.tsx
echo_pr/src/shared/api/: client.ts
vkposting/: .env.example  example_usage.py  main.py  pyproject.toml  requirements.txt
vkposting/scripts/: vk_scheduled_create.py  vk_scheduled_delete.py  vk_scheduled_edit.py  vk_scheduled_get.py  vk_scheduled_list.py
vkposting/vkposting/: __init__.py  exceptions.py  models.py  wall_scheduler.py
(+67 files in other folders)
