[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vkposting"
version = "0.1.0"
description = "Async VK wall scheduled posts helper with Pydantic validation and Upload API support"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.9.0",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.1",
]

[tool.setuptools]
packages = ["vkposting"]
